<resources>
    <string name="app_name">Retailer Wizard</string>
    <string name="checkout_counter">checkout counter</string>
    <string name="data_synchronization">data synchronization</string>
    <string name="checkout_counter_title">Checkout Counter</string>
    <string name="serial_number">serial number</string>
    <string name="name">name</string>
    <string name="unit">unit</string>
    <string name="amount">amount</string>
    <string name="price">price</string>
    <string name="modify_database">modify database</string>
    <string name="button_save">save</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
</resources>