<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:divider="@color/bg_black"
        android:stretchColumns="1">

        <TableRow android:showDividers="middle"
            android:divider="@color/bg_black">

            <TextView
                android:padding="3dp"
                android:text="@string/serial_number" />

            <TextView
                android:id="@+id/serial_number"
                android:padding="3dp" />
        </TableRow>

        <TableRow android:showDividers="middle"
            android:divider="@color/bg_black">

            <TextView
                android:padding="3dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:padding="3dp" />
        </TableRow>

        <TableRow android:showDividers="middle"
            android:divider="@color/bg_black">

            <TextView
                android:padding="3dp"
                android:text="@string/unit" />

            <TextView
                android:id="@+id/unit"
                android:padding="3dp" />
        </TableRow>

        <TableRow android:showDividers="middle"
            android:divider="@color/bg_black">

            <TextView
                android:padding="3dp"
                android:text="@string/amount" />

            <TextView
                android:id="@+id/amount"
                android:padding="3dp" />
        </TableRow>

        <TableRow android:showDividers="middle"
            android:divider="@color/bg_black">

            <TextView
                android:padding="3dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                android:padding="3dip" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@color/bg_black" />
    </TableLayout>


</com.google.android.material.card.MaterialCardView>